# da-vinci

./: .flake8  .gitignore  .mcp.json  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  dex.hcl  lint.sh  pyproject.toml  test.sh
da_vinci/: Dockerfile  README.md  pyproject.toml
da_vinci-cdk/: pyproject.toml
da_vinci-cdk/da_vinci_cdk/: application.py  stack.py
da_vinci-cdk/da_vinci_cdk/constructs/: access_management.py  ai.py  base.py  dns.py  dynamodb.py  event_bus.py  global_setting.py  lambda_function.py  managed_policies.py  resource_discovery.py  s3.py  service.py
da_vinci-cdk/da_vinci_cdk/framework_stacks/event_bus/: stack.py
da_vinci-cdk/da_vinci_cdk/framework_stacks/event_bus_responses/: stack.py
da_vinci-cdk/da_vinci_cdk/framework_stacks/event_bus_subscriptions/: stack.py
da_vinci-cdk/da_vinci_cdk/framework_stacks/exceptions_trap/: stack.py
da_vinci-cdk/da_vinci_cdk/framework_stacks/global_settings/: stack.py
da_vinci-cdk/da_vinci_cdk/framework_stacks/trapped_exceptions/: stack.py
da_vinci-cdk/tests/: test_application.py  test_stack.py
da_vinci-cdk/tests/constructs/: __init__.py  test_access_management.py  test_base.py  test_dns.py  test_resource_discovery.py  test_service.py
da_vinci-cdk/tests/framework_stacks/: test_service_stacks.py
da_vinci/da_vinci/core/: base.py  client_base.py  exceptions.py  execution_environment.py  global_settings.py  immutable_object.py  json.py  logging.py  resource_discovery.py  rest_service_base.py
da_vinci/da_vinci/core/orm/: __init__.py  client.py  exceptions.py  table_object.py
da_vinci/da_vinci/core/tables/: application_resources.py  global_settings.py  global_settings_table.py  resource_registry.py  settings.py
da_vinci/da_vinci/event_bus/: client.py  event.py  event_bus_client.py  exceptions.py  object.py
da_vinci/da_vinci/event_bus/tables/: event_bus_responses.py  event_bus_subscriptions.py
da_vinci/da_vinci/exception_trap/: client.py  exception_trap_client.py
da_vinci/da_vinci/exception_trap/tables/: trapped_exceptions.py
da_vinci/tests/: conftest.py  test_exceptions.py  test_execution_environment.py  test_immutable_object.py  test_orm_client.py  test_resource_discovery.py  test_table_object.py
integration/: Makefile  README.md  conftest.py  pyproject.toml  pytest.ini
integration/app/: Dockerfile  app.py
integration/app/handlers/: chain_first.py  chain_second.py  failing_handler.py  rest_handler.py  successful_handler.py
integration/app/handlers/shared/: person.py
integration/app/stacks/: event_handlers_stack.py  orm_stack.py  rest_stack.py  settings_stack.py
integration/features/: callback_chain.feature  event_bus.feature  exception_trap.feature  rest_service_orm.feature  sidecar.feature
integration/lib/: __init__.py  aws.py  context.py  deployment.py  events.py  exceptions.py  responses.py  rest.py  tables.py  waiters.py
integration/sidecar/: Dockerfile  app.py  cdk.json
integration/sidecar/handlers/: echo.py  sidecar_boom.py  sidecar_writer.py
integration/sidecar/handlers/shared/: person.py
integration/sidecar/stacks/: echo_stack.py
integration/tests/: conftest.py  test_callback_chain.py  test_event_bus.py  test_exception_trap.py  test_rest_service_orm.py  test_sidecar.py
(+118 files in other folders)
