[tool.poetry]
name = "da-vinci-cdk"
version = "2025.4.20"
description = "Da Vinci CDK components"
authors = ["Jim Rosser"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aws-cdk-lib = "^2.184.1"
constructs = "^10.0.0"
da-vinci = { git = "https://github.com/jarosser06/da-vinci", develop = true, subdirectory = "da_vinci" }


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
