[tool.poetry]
name = "da-vinci"
version = "1.3.3"
description = "Da Vinci is used to rapidly build AWS Cloud Native based systems"
authors = ["Jim Rosser"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
boto3 = "~1.34.9"
requests = "^2.31.0"
requests-auth-aws-sigv4 = "0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
