[project]
name = "da-vinci-integration"
version = "0.1.0"
description = "Real-AWS integration test framework for the da_vinci project"
authors = [{ name = "Jim Rosser" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.13",
    "botocore>=1.37.13",
    "requests>=2.32.3",
    "requests-auth-aws-sigv4==0.7",
    "pytest>=8.0.0",
    "pytest-bdd>=8.0.0",
    "da-vinci",
    "da-vinci-cdk",
]

[tool.uv.sources]
da-vinci = { workspace = true }
da-vinci-cdk = { workspace = true }

[tool.hatch.build.targets.wheel]
packages = ["lib"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501"]
